Fix grid view buttons visibility

--- a/style.css
+++ b/style.css
@@ -780,8 +780,11 @@ button:focus {
   gap: var(--spacing);
 }
 
-#plant-grid.grid-view .actions-left,
-#plant-grid.grid-view .actions-right {
+#plant-grid.grid-view .actions-left {
+  display: none;
+}
+
+#plant-grid.grid-view .actions-right > :not(.more-wrapper) {
   display: none;
 }
 
